manifests/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"recurrant:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"recurrant\")].image"}
      ]
  labels:
    app: recurrant
  name: recurrant
  namespace: recurrant
spec:
  replicas: 1
  selector:
    deploymentconfig: recurrant
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: recurrant
        deploymentconfig: recurrant
    spec:
      containers:
        - image: ""
          imagePullPolicy: Always
          name: recurrant
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          workingDir: /tmp/git
          volumeMounts:
            - name: git-repo
              mountPath: /tmp/git
        - name: git-sync
          image: k8s.gcr.io/git-sync:v3.1.2
          args:
            - --repo=$(GIT_SYNC_REPO)
            - --branch=$(GIT_SYNC_REF)
            - --wait=$(GIT_SYNC_WAIT)
            - --webhook-url=http://localhost:8080/apply
            - --webhook-backoff=$(GIT_SYNC_WEBHOOK_BACKOFF)
          resources: {}
          volumeMounts:
            - name: git-repo
              mountPath: /tmp/git
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: gitops-robot
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: git-repo
          emptyDir: {}
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - recurrant
        from:
          kind: ImageStreamTag
          name: "recurrant:latest"
      type: ImageChange
    - type: ConfigChange
