manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recurrant
  namespace: recurrant
spec:
  selector:
    deploymentconfig: recurrant
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
