manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: recurrant
  namespace: recurrant
spec:
  host: recurrant.vrutkovs.eu
  subdomain: ""
  to:
    kind: Service
    name: recurrant
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
